src/g_parser.js
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/

  import * as ast from './ast'

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Program: peg$parseProgram,
  };
  let peg$startRuleFunction = peg$parseProgram;

  const peg$c0 = "in";
  const peg$c1 = "a";
  const peg$c2 = "b";
  const peg$c3 = "c";
  const peg$c4 = "d";
  const peg$c5 = "e";
  const peg$c6 = "f";
  const peg$c7 = "g";
  const peg$c8 = "i";
  const peg$c9 = "j";
  const peg$c10 = "l";
  const peg$c11 = "m";
  const peg$c12 = "n";
  const peg$c13 = "o";
  const peg$c14 = "p";
  const peg$c15 = "r";
  const peg$c16 = "s";
  const peg$c17 = "t";
  const peg$c18 = "w";
  const peg$c19 = "x";
  const peg$c20 = "y";
  const peg$c21 = "0";
  const peg$c22 = "1";
  const peg$c23 = "2";
  const peg$c24 = ",";
  const peg$c25 = "/";
  const peg$c26 = "=";
  const peg$c27 = "%";
  const peg$c28 = "<";
  const peg$c29 = ">";
  const peg$c30 = "<=";
  const peg$c31 = ">=";
  const peg$c32 = "==";
  const peg$c33 = "!=";
  const peg$c34 = "!";
  const peg$c35 = "(";
  const peg$c36 = ")";
  const peg$c37 = "{";
  const peg$c38 = "}";
  const peg$c39 = "-";
  const peg$c40 = "+";
  const peg$c41 = "\xA7";
  const peg$c42 = "*";
  const peg$c43 = "\"";
  const peg$c44 = ";";
  const peg$c45 = ":";
  const peg$c46 = "::";

  const peg$r0 = /^[a-zA-Z_]/;
  const peg$r1 = /^[a-zA-Z_0-9]/;
  const peg$r2 = /^[0-9a-f]/i;
  const peg$r3 = /^[0-1]/;
  const peg$r4 = /^[+\-]/;
  const peg$r5 = /^[0-9]/;
  const peg$r6 = /^[=]/;
  const peg$r7 = /^[\t\v-\f \xA0\uFEFF]/;
  const peg$r8 = /^[\n\r]/;
  const peg$r9 = /^[a-d]/i;
  const peg$r10 = /^[x-y]/i;

  const peg$e0 = peg$otherExpectation("directive");
  const peg$e1 = peg$literalExpectation("in", false);
  const peg$e2 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false, false);
  const peg$e3 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"]], false, false, false);
  const peg$e4 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true, false);
  const peg$e5 = peg$classExpectation([["0", "1"]], false, false, false);
  const peg$e6 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e7 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e8 = peg$literalExpectation("a", true);
  const peg$e9 = peg$literalExpectation("b", true);
  const peg$e10 = peg$literalExpectation("c", true);
  const peg$e11 = peg$literalExpectation("d", true);
  const peg$e12 = peg$literalExpectation("e", true);
  const peg$e13 = peg$literalExpectation("f", true);
  const peg$e14 = peg$literalExpectation("g", true);
  const peg$e15 = peg$literalExpectation("i", true);
  const peg$e16 = peg$literalExpectation("j", true);
  const peg$e17 = peg$literalExpectation("l", true);
  const peg$e18 = peg$literalExpectation("m", true);
  const peg$e19 = peg$literalExpectation("n", true);
  const peg$e20 = peg$literalExpectation("o", true);
  const peg$e21 = peg$literalExpectation("p", true);
  const peg$e22 = peg$literalExpectation("r", true);
  const peg$e23 = peg$literalExpectation("s", true);
  const peg$e24 = peg$literalExpectation("t", true);
  const peg$e25 = peg$literalExpectation("w", true);
  const peg$e26 = peg$literalExpectation("x", true);
  const peg$e27 = peg$literalExpectation("y", true);
  const peg$e28 = peg$literalExpectation("0", false);
  const peg$e29 = peg$literalExpectation("1", false);
  const peg$e30 = peg$literalExpectation("2", false);
  const peg$e31 = peg$literalExpectation(",", false);
  const peg$e32 = peg$literalExpectation("/", false);
  const peg$e33 = peg$literalExpectation("=", false);
  const peg$e34 = peg$literalExpectation("%", false);
  const peg$e35 = peg$literalExpectation("<", false);
  const peg$e36 = peg$classExpectation(["="], false, false, false);
  const peg$e37 = peg$literalExpectation(">", false);
  const peg$e38 = peg$literalExpectation("<=", false);
  const peg$e39 = peg$literalExpectation(">=", false);
  const peg$e40 = peg$literalExpectation("==", false);
  const peg$e41 = peg$literalExpectation("!=", false);
  const peg$e42 = peg$literalExpectation("!", false);
  const peg$e43 = peg$literalExpectation("(", false);
  const peg$e44 = peg$literalExpectation(")", false);
  const peg$e45 = peg$literalExpectation("{", false);
  const peg$e46 = peg$literalExpectation("}", false);
  const peg$e47 = peg$literalExpectation("-", false);
  const peg$e48 = peg$literalExpectation("+", false);
  const peg$e49 = peg$literalExpectation("\xA7", false);
  const peg$e50 = peg$literalExpectation("*", false);
  const peg$e51 = peg$literalExpectation("\"", false);
  const peg$e52 = peg$anyExpectation();
  const peg$e53 = peg$otherExpectation("whitespace");
  const peg$e54 = peg$classExpectation(["\t", ["\v", "\f"], " ", "\xA0", "\uFEFF"], false, false, false);
  const peg$e55 = peg$otherExpectation("end of line");
  const peg$e56 = peg$classExpectation(["\n", "\r"], false, false, false);
  const peg$e57 = peg$otherExpectation("comment");
  const peg$e58 = peg$literalExpectation(";", false);
  const peg$e59 = peg$otherExpectation("label");
  const peg$e60 = peg$literalExpectation(":", false);
  const peg$e61 = peg$otherExpectation("ORG");
  const peg$e62 = peg$otherExpectation("mnemonic");
  const peg$e63 = peg$otherExpectation("literal");
  const peg$e64 = peg$otherExpectation("identifier");
  const peg$e65 = peg$literalExpectation("::", false);
  const peg$e66 = peg$otherExpectation("register");
  const peg$e67 = peg$classExpectation([["a", "d"]], false, true, false);
  const peg$e68 = peg$classExpectation([["x", "y"]], false, true, false);
  const peg$e69 = peg$otherExpectation("current-pc");

  function peg$f0(ls) {    return ast.mkProgram(ls, loc());  }
  function peg$f1(head, tail) {    return buildList(head, tail, 1);  }
  function peg$f2(line) {    return line  }
  function peg$f3(l, sl) {    return ast.mkAsmLine(l,null,sl,loc());  }
  function peg$f4(l, s) {    return ast.mkAsmLine(l,s,null,loc());  }
  function peg$f5(l) {    return ast.mkAsmLine(l,null,null,loc());  }
  function peg$f6(o) {    return ast.mkAsmLine(null,o,null,loc());  }
  function peg$f7(s) {    return ast.mkAsmLine(null,s,null,loc());  }
  function peg$f8() {    return ast.mkAsmLine(null,null,null,loc());  }
  function peg$f9(drct) {    return drct;  }
  function peg$f10(insn) {    return insn;  }
  function peg$f11(size, values) {
    const dataSize = size == 'byte' ? ast.DataSize.Byte : ast.DataSize.Word;
    return ast.mkData(dataSize, values, loc());
  }
  function peg$f12(numBytes, fillValue) {
    return ast.mkFill(numBytes, fillValue, loc());
  }
  function peg$f13(condition, trueBranch, elifs, elseBody) {
    const conds = [condition, ...elifs.map(e => e.condition)]
    const trueBodies = [trueBranch, ...elifs.map(e => e.trueBranch)]
    const cases = conds.map((c,i) => [c, trueBodies[i]])
    return ast.mkIfElse(cases, elseBody, loc());
  }
  function peg$f14(index, list, body) {
    return ast.mkFor(index, list, body, loc());
  }
  function peg$f15(name, value) {    return ast.mkLet(name, value, loc());  }
  function peg$f16(error) {
    return ast.mkError(error, loc());
  }
  function peg$f17(alignBytes) {
    return ast.mkAlign(alignBytes, loc());
  }
  function peg$f18(condition, trueBranch) {
    return { condition, trueBranch };
  }
  function peg$f19(elseBody) {
    return elseBody;
  }
  function peg$f20(head, tail) {    return buildList(head, tail, 3);  }
  function peg$f21(m, o1, o2) {    return ast.mkInsn(m,o1,o2,loc());  }
  function peg$f22(m, o1) {    return ast.mkInsn(m,o1,null,loc());  }
  function peg$f23(m) {    return ast.mkInsn(m,null,null,loc());  }
  function peg$f24(first, rest) {
    return rest.reduce(function(memo, curr) {
      return ast.mkBinaryOp(curr[1], memo, curr[3], loc());
    }, first);
  }
  function peg$f25(first, rest) {
    return rest.reduce(function(memo, curr) {
      return ast.mkBinaryOp(curr[1], memo, curr[3], loc());
    }, first);
  }
  function peg$f26(first, rest) {
    return rest.reduce(function(memo, curr) {
      return ast.mkBinaryOp(curr[1], memo, curr[3], loc());
    }, first);
  }
  function peg$f27(first, rest) {
    return rest.reduce(function(memo, curr) {
      return ast.mkBinaryOp(curr[1], memo, curr[3], loc());
    }, first);
  }
  function peg$f28(callee, args) {
    return ast.mkCallFunc(callee, args, loc());
  }
  function peg$f29(e) {    return e;  }
  function peg$f30(s) {    return s;  }
  function peg$f31(s) {    return s;  }
  function peg$f32(s) {    return s;  }
  function peg$f33(s) {    return s;  }
  function peg$f34(s) {    return s;  }
  function peg$f35(s) {    return s;  }
  function peg$f36(s) {    return s;  }
  function peg$f37(s) {    return s;  }
  function peg$f38(s) {    return s;  }
  function peg$f39(s) {    return s;  }
  function peg$f40(s) {    return s;  }
  function peg$f41(s) {    return s;  }
  function peg$f42(s) {    return s;  }
  function peg$f43(s) {    return s;  }
  function peg$f44(s) {    return s;  }
  function peg$f45(s) {    return s;  }
  function peg$f46(s) {    return s;  }
  function peg$f47(s) {    return s;  }
  function peg$f48(s) {    return s;  }
  function peg$f49() {    return 'byte';  }
  function peg$f50() {    return 'word';  }
  function peg$f51(v) {    return parseInt(v,2);  }
  function peg$f52(v) {    return parseInt(v,16);  }
  function peg$f53(v) {    return parseInt(v);  }
  function peg$f54(c) {    return c.join('');  }
  function peg$f55(c) {    return ast.mkLiteral(c.join(''), loc());  }
  function peg$f56(char) {    return char;  }
  function peg$f57() {    return text();  }
  function peg$f58(sym) {    return sym;  }
  function peg$f59(lbl) {    return ast.mkLabel(lbl,loc());  }
  function peg$f60(v) {    return ast.mkSetPC(v, loc());  }
  function peg$f61(mne) {    return mne;  }
  function peg$f62(v) {    return ast.mkLiteral(v, 'b', loc());  }
  function peg$f63(v) {    return ast.mkLiteral(v, 'h', loc());  }
  function peg$f64(v) {    return ast.mkLiteral(v, 'd', loc());  }
  function peg$f65(s) {    return ast.mkLiteral(s, 's', loc());  }
  function peg$f66(head, tail) {    return ast.mkScopeQualifiedIdent(buildList(head, tail, 1), false, loc());  }
  function peg$f67(head, tail) {    return ast.mkScopeQualifiedIdent(buildList(head, tail, 1), true, loc());  }
  function peg$f68(ident) {    return ast.mkIdent(ident, loc());  }
  function peg$f69(name) {    return ast.mkRegister(name.toLowerCase(),loc());  }
  function peg$f70() {    return ast.mkGetCurPC(loc());  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseProgram() {
    let s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseLines();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseLines() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseLineWithComment();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseEOL();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseLineWithComment();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseEOL();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseLineWithComment();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f1(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLineWithComment() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseLine();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseCOMMENT();
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f2(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLine() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseLABEL();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseLWING();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseLines();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s7 = peg$parseRWING();
          if (s7 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f3(s1, s5);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseLABEL();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        s3 = peg$parseStatement();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f4(s1, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseLABEL();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$f5(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseORG();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$f6(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseStatement();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$f7(s1);
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parse_();
              peg$savedPos = s0;
              s1 = peg$f8();
              s0 = s1;
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseStatement() {
    let s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseDirective();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f9(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseInstruction();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f10(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseDirective() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;
